Adicionar funcionalidade de filtro por período de produtos
Implementados métodos para buscar produtos por período na classe `SQLiteDatabaseHelper`.
Adicionado novo item de compilação para `Registro.xaml.cs` no `.csproj`.
Incluído botão de filtro na página `ListaProduto.xaml` e ajustado o cabeçalho da lista de produtos.
Criada a interface da nova página `Registro.xaml` para seleção de datas e implementada a lógica correspondente em `Registro.xaml.cs`.

--- a/MauiAppMinhasCompras/MauiAppMinhasCompras.csproj
+++ b/MauiAppMinhasCompras/MauiAppMinhasCompras.csproj
@@ -64,10 +64,19 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="Views\Registro.xaml.cs">
+	    <DependentUpon>Registro.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
 	  <MauiXaml Update="Views\EditarProduto.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\ListaProduto.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\Registro.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\NovoProduto.xaml">
